test_fix_check2.txt
============================= test session starts =============================
platform win32 -- Python 3.14.3, pytest-9.0.2, pluggy-1.6.0
benchmark: 5.2.3 (defaults: timer=time.perf_counter disable_gc=False min_rounds=5 min_time=0.000005 max_time=1.0 calibration_precision=10 warmup=False warmup_iterations=100000)
rootdir: S:\sigmalang
configfile: pyproject.toml
plugins: anyio-4.12.1, hypothesis-6.151.4, locust-2.43.3, asyncio-1.3.0, benchmark-5.2.3, cov-7.0.0, timeout-2.4.0
asyncio: mode=Mode.STRICT, debug=False, asyncio_default_fixture_loop_scope=None, asyncio_default_test_loop_scope=function
timeout: 30.0s
timeout method: thread
timeout func_only: False
collected 0 items / 2 errors

=================================== ERRORS ====================================
_______________ ERROR collecting tests/test_memory_profiling.py _______________
C:\Users\sgbil\AppData\Roaming\Python\Python314\site-packages\_pytest\python.py:507: in importtestmodule
    mod = import_path(
C:\Users\sgbil\AppData\Roaming\Python\Python314\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
C:\Python314\Lib\importlib\__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1398: in _gcd_import
    ???
<frozen importlib._bootstrap>:1371: in _find_and_load
    ???
<frozen importlib._bootstrap>:1342: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:938: in _load_unlocked
    ???
C:\Users\sgbil\AppData\Roaming\Python\Python314\site-packages\_pytest\assertion\rewrite.py:188: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Users\sgbil\AppData\Roaming\Python\Python314\site-packages\_pytest\assertion\rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Python314\Lib\ast.py:46: in parse
    return compile(source, filename, mode, flags,
E     File "S:\sigmalang\tests\test_memory_profiling.py", line 261
E       placeholder = SemanticNode(primitive=CodePrimitive.BLOCK, valueroot")
E                                                                          ^
E   SyntaxError: unterminated string literal (detected at line 261)
________________ ERROR collecting tests/test_optimizations.py _________________
C:\Users\sgbil\AppData\Roaming\Python\Python314\site-packages\_pytest\python.py:507: in importtestmodule
    mod = import_path(
C:\Users\sgbil\AppData\Roaming\Python\Python314\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
C:\Python314\Lib\importlib\__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1398: in _gcd_import
    ???
<frozen importlib._bootstrap>:1371: in _find_and_load
    ???
<frozen importlib._bootstrap>:1342: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:938: in _load_unlocked
    ???
C:\Users\sgbil\AppData\Roaming\Python\Python314\site-packages\_pytest\assertion\rewrite.py:188: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Users\sgbil\AppData\Roaming\Python\Python314\site-packages\_pytest\assertion\rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Python314\Lib\ast.py:46: in parse
    return compile(source, filename, mode, flags,
E     File "S:\sigmalang\tests\test_optimizations.py", line 97
E       assert len(pool._available_indices
E                 ^
E   SyntaxError: '(' was never closed
=========================== short test summary info ===========================
ERROR tests/test_memory_profiling.py
ERROR tests/test_optimizations.py
!!!!!!!!!!!!!!!!!!! Interrupted: 2 errors during collection !!!!!!!!!!!!!!!!!!!
============================== 2 errors in 1.35s ==============================
